# ***************************************************************************
#    The Base Framework (Test Suite)
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

DEFS =
AUTOMAKE_OPTIONS = 1.4 foreign nostdinc dist-bzip2 dist-zip

LIBS=-lbase

bin_PROGRAMS = Array
bin_PROGRAMS += List
bin_PROGRAMS += Queue
bin_PROGRAMS += Set
bin_PROGRAMS += Map
bin_PROGRAMS += String
bin_PROGRAMS += io
bin_PROGRAMS += client
bin_PROGRAMS += server
bin_PROGRAMS += datagramClient
bin_PROGRAMS += datagramServer
bin_PROGRAMS += Thread
bin_PROGRAMS += referenceCounting
bin_PROGRAMS += fileInput
bin_PROGRAMS += mtServer
bin_PROGRAMS += filesystem
bin_PROGRAMS += xml
bin_PROGRAMS += daemon
bin_PROGRAMS += Exception
bin_PROGRAMS += ftp
bin_PROGRAMS += http
bin_PROGRAMS += dlapp
bin_PROGRAMS += intercom
bin_PROGRAMS += SerialPort
bin_PROGRAMS += dump
bin_PROGRAMS += File
bin_PROGRAMS += Huffman
bin_PROGRAMS += IEEE1394
bin_PROGRAMS += floatingPoint
bin_PROGRAMS += Process
bin_PROGRAMS += time
bin_PROGRAMS += Version

#lib_LTLIBRARIES = dlmodule.la

Array_SOURCES = Array.cpp
List_SOURCES = List.cpp
Queue_SOURCES = Queue.cpp
Set_SOURCES = Set.cpp
Map_SOURCES = Map.cpp
String_SOURCES = String.cpp
io_SOURCES = io.cpp
client_SOURCES = client.cpp
server_SOURCES = server.cpp
datagramClient_SOURCES = datagramClient.cpp
datagramServer_SOURCES = datagramServer.cpp
Thread_SOURCES = Thread.cpp
referenceCounting_SOURCES = referenceCounting.cpp
fileInput_SOURCES = fileInput.cpp
mtServer_SOURCES = mtServer.cpp
filesystem_SOURCES = filesystem.cpp
xml_SOURCES = xml.cpp
daemon_SOURCES = daemon.cpp
Exception_SOURCES = Exception.cpp
ftp_SOURCES = ftp.cpp
http_SOURCES = http.cpp
dlapp_SOURCES = dlapp.cpp MyLinkerModule.cpp
intercom_SOURCES = intercom.cpp
SerialPort_SOURCES = SerialPort.cpp
dump_SOURCES = dump.cpp
File_SOURCES = File.cpp
floatingPoint_SOURCES = floatingPoint.cpp
Huffman_SOURCES = Huffman.cpp
IEEE1394_SOURCES = IEEE1394.cpp
Process_SOURCES = Process.cpp
time_SOURCES = time.cpp
Version_SOURCES = Version.cpp

#dlmodule_la_SOURCES = dlmodule.cpp MyLinkerModule.cpp
#dlmodule_la_LDFLAGS = -avoid-version -module -no-undefined -version-info 0:1:0

EXTRA_DIST =
