# ***************************************************************************
#    The Base Framework (Test Suite)
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

DEFS =
AUTOMAKE_OPTIONS = 1.4 foreign nostdinc dist-bzip2 dist-zip

SUBDIRS = orb ui

LIBS=-lbase

bin_PROGRAMS = Array
bin_PROGRAMS += BitSet
bin_PROGRAMS += Exception
bin_PROGRAMS += File
bin_PROGRAMS += HashSet
bin_PROGRAMS += HashTable
bin_PROGRAMS += Huffman
bin_PROGRAMS += IEEE1394
bin_PROGRAMS += List
bin_PROGRAMS += Map
bin_PROGRAMS += Queue
bin_PROGRAMS += SerialPort
bin_PROGRAMS += Set
bin_PROGRAMS += Stack
bin_PROGRAMS += String
bin_PROGRAMS += Thread
bin_PROGRAMS += Version
bin_PROGRAMS += io
bin_PROGRAMS += client
bin_PROGRAMS += server
bin_PROGRAMS += datagramClient
bin_PROGRAMS += datagramServer
bin_PROGRAMS += referenceCounting
bin_PROGRAMS += fileInput
bin_PROGRAMS += mtServer
bin_PROGRAMS += filesystem
bin_PROGRAMS += xml
bin_PROGRAMS += daemon
bin_PROGRAMS += dlapp
bin_PROGRAMS += intercom
bin_PROGRAMS += compress
bin_PROGRAMS += cp
bin_PROGRAMS += digest
bin_PROGRAMS += du
bin_PROGRAMS += dump
bin_PROGRAMS += echod
bin_PROGRAMS += eval
bin_PROGRAMS += ftp
bin_PROGRAMS += host
bin_PROGRAMS += http
bin_PROGRAMS += filetype
bin_PROGRAMS += floatingPoint
bin_PROGRAMS += inet
bin_PROGRAMS += ln
bin_PROGRAMS += ls
bin_PROGRAMS += multicastServer
bin_PROGRAMS += ping
bin_PROGRAMS += Process
bin_PROGRAMS += quota
bin_PROGRAMS += rm
bin_PROGRAMS += time

#lib_LTLIBRARIES = dlmodule.la

Array_SOURCES = Array.cpp
BitSet_SOURCES = BitSet.cpp
Exception_SOURCES = Exception.cpp
File_SOURCES = File.cpp
HashSet_SOURCES = HashSet.cpp
HashTable_SOURCES = HashTable.cpp
Huffman_SOURCES = Huffman.cpp
IEEE1394_SOURCES = IEEE1394.cpp
List_SOURCES = List.cpp
Queue_SOURCES = Queue.cpp
Map_SOURCES = Map.cpp
Process_SOURCES = Process.cpp
SerialPort_SOURCES = SerialPort.cpp
Set_SOURCES = Set.cpp
Stack_SOURCES = Stack.cpp
String_SOURCES = String.cpp
Thread_SOURCES = Thread.cpp
Version_SOURCES = Version.cpp
io_SOURCES = io.cpp
client_SOURCES = client.cpp
server_SOURCES = server.cpp
datagramClient_SOURCES = datagramClient.cpp
datagramServer_SOURCES = datagramServer.cpp
referenceCounting_SOURCES = referenceCounting.cpp
fileInput_SOURCES = fileInput.cpp
mtServer_SOURCES = mtServer.cpp
filesystem_SOURCES = filesystem.cpp
xml_SOURCES = xml.cpp
daemon_SOURCES = daemon.cpp
dlapp_SOURCES = dlapp.cpp MyLinkerModule.cpp
intercom_SOURCES = intercom.cpp
floatingPoint_SOURCES = floatingPoint.cpp
compress_SOURCES = compress.cpp
cp_SOURCES = cp.cpp
digest_SOURCES = digest.cpp
du_SOURCES = du.cpp
dump_SOURCES = dump.cpp
echod_SOURCES = echod.cpp
eval_SOURCES = eval.cpp
filetype_SOURCES = filetype.cpp
ftp_SOURCES = ftp.cpp
host_SOURCES = host.cpp
http_SOURCES = http.cpp
inet_SOURCES = inet.cpp
ln_SOURCES = ln.cpp
ls_SOURCES = ls.cpp
multicastServer_SOURCES = multicastServer.cpp
ping_SOURCES = ping.cpp
quota_SOURCES = Quota.cpp
rm_SOURCES = rm.cpp
time_SOURCES = time.cpp

#dlmodule_la_SOURCES = dlmodule.cpp MyLinkerModule.cpp
#dlmodule_la_LDFLAGS = -avoid-version -module -no-undefined -version-info 0:1:0

EXTRA_DIST =
