####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libcollection.la

libcollection_la_SOURCES = EndOfEnumeration.cpp InvalidEnumeration.cpp InvalidKey.cpp InvalidNode.cpp BitSet.cpp

sectiondir = $(includedir)/base/collection
section_HEADERS = Enumeration.h Collection.h List.h Stack.h Map.h Set.h InvalidKey.h Queue.h EndOfEnumeration.h Array.h BinaryTree.h OrderedBinaryTree.h InvalidNode.h InvalidEnumeration.h Functor.h BitSet.h Pair.h PriorityQueue.h DoubleLinkedNode.h SingleLinkedNode.h BinaryNode.h Association.h
