# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libcollection.la

libcollection_la_SOURCES = EndOfEnumeration.cpp InvalidEnumeration.cpp InvalidKey.cpp InvalidNode.cpp BitSet.cpp

sectiondir = $(includedir)/base/collection
section_HEADERS = Enumeration.h Collection.h List.h Stack.h Map.h Set.h InvalidKey.h Queue.h EndOfEnumeration.h Array.h BinaryTree.h OrderedBinaryTree.h InvalidNode.h InvalidEnumeration.h Functor.h BitSet.h Pair.h PriorityQueue.h DoubleLinkedNode.h SingleLinkedNode.h BinaryNode.h Association.h
