# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libcollection.la

libcollection_la_SOURCES = \
  BitSet.cpp \
  EndOfEnumeration.cpp \
  HashTable.cpp \
  InvalidEnumeration.cpp \
  InvalidKey.cpp \
  InvalidNode.cpp

sectiondir = $(includedir)/base/collection
section_HEADERS = \
  Array.h \
  Association.h \
  BinaryNode.h \
  BinaryTree.h \
  BitSet.h \
  Collection.h \
  DoubleLinkedNode.h \
  EndOfEnumeration.h \
  Enumeration.h \
  Functor.h \
  Hash.h \
  HashTable.h \
  InvalidEnumeration.h \
  InvalidKey.h \
  InvalidNode.h \
  List.h \
  Map.h \
  OrderedBinaryTree.h \
  Pair.h \
  PriorityQueue.h \
  Queue.h \
  Set.h \
  SingleLinkedNode.h \
  Stack.h
