####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libcommunication.la

libcommunication_la_SOURCES = CommunicationsException.cpp CommunicationsPort.cpp SerialPort.cpp

sectiondir = $(includedir)/base/communication
section_HEADERS = CommunicationsException.h CommunicationsPort.h SerialPort.h
