####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =

noinst_LTLIBRARIES = libdl.la libmodule.la

libdl_la_SOURCES = LinkerException.cpp DynamicLinker.cpp LinkerModule.cpp LinkerManager.cpp

sectiondir = $(includedir)/base/dl
section_HEADERS = LinkerException.h DynamicLinker.h LinkerModule.h LinkerManager.h

libmodule_la_SOURCES = module.cpp
libmodule_la_LDFLAGS = -nostartfiles
