####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =

noinst_LTLIBRARIES = libfilesystem.la

sectiondir = $(includedir)/base/filesystem
section_HEADERS = FileSystem.h
section_HEADERS += FileSystemException.h
section_HEADERS += FileInfo.h
section_HEADERS += FolderInfo.h

libfilesystem_la_SOURCES = FileSystem.cpp FileInfo.cpp FolderInfo.cpp
