####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =

noinst_LTLIBRARIES = libfilesystem.la

libfilesystem_la_SOURCES = FileSystem.cpp FileInfo.cpp FolderInfo.cpp

sectiondir = $(includedir)/base/filesystem
section_HEADERS = FileSystem.h FileSystemException.h FileInfo.h FolderInfo.h
