# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libfilesystem.la

libfilesystem_la_SOURCES = FileSystem.cpp FileInfo.cpp FolderInfo.cpp

sectiondir = $(includedir)/base/filesystem
section_HEADERS = FileSystem.h FileSystemException.h FileInfo.h FolderInfo.h
