####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

SUBDIRS = async

noinst_LTLIBRARIES = libio.la

libio_la_SOURCES = TimedOut.cpp AccessDenied.cpp BindException.cpp FileDescriptorInputStream.cpp FileDescriptorOutputStream.cpp Stream.cpp FileNotFound.cpp IOException.cpp EndOfFile.cpp EOFException.cpp InputStream.cpp OutputStream.cpp FilterInputStream.cpp PrimitiveOutputStream.cpp PrimitiveInputStream.cpp FileInputStream.cpp FileOutputStream.cpp FileDescriptor.cpp FilterOutputStream.cpp BufferedOutputStream.cpp BufferedInputStream.cpp Pipe.cpp File.cpp MappedFile.cpp FileReader.cpp FileRegion.cpp LockableRegion.cpp

sectiondir = $(includedir)/base/io
section_HEADERS = InputStream.h PrimitiveOutputStream.h FileInputStream.h FilterInputStream.h BufferedInputStream.h FileDescriptor.h Externalizable.h OutputStream.h FilterOutputStream.h BufferedOutputStream.h FileOutputStream.h PrimitiveInputStream.h EOFException.h EndOfFile.h FileNotFound.h IOException.h BindException.h Stream.h FileDescriptorInputStream.h FileDescriptorOutputStream.h AccessDenied.h TimedOut.h Pipe.h File.h MappedFile.h FileReader.h FileException.h PipeException.h FileRegion.h LockableRegion.h
