####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

SUBDIRS = async

noinst_LTLIBRARIES = libio.la

libio_la_SOURCES = Handle.cpp FileDescriptor.cpp TimedOut.cpp AccessDenied.cpp BindException.cpp Stream.cpp InputStream.cpp OutputStream.cpp FileDescriptorInputStream.cpp FileDescriptorOutputStream.cpp FileNotFound.cpp IOException.cpp EndOfFile.cpp EOFException.cpp FilterInputStream.cpp PrimitiveOutputStream.cpp PrimitiveInputStream.cpp File.cpp FileInputStream.cpp FileOutputStream.cpp FilterOutputStream.cpp BufferedOutputStream.cpp BufferedInputStream.cpp Pipe.cpp MappedFile.cpp FileReader.cpp FileRegion.cpp LockableRegion.cpp

sectiondir = $(includedir)/base/io
section_HEADERS = Handle.h InputStream.h PrimitiveOutputStream.h FileInputStream.h FilterInputStream.h BufferedInputStream.h FileDescriptor.h Externalizable.h OutputStream.h FilterOutputStream.h BufferedOutputStream.h FileOutputStream.h PrimitiveInputStream.h EOFException.h EndOfFile.h FileNotFound.h IOException.h BindException.h Stream.h FileDescriptorInputStream.h FileDescriptorOutputStream.h AccessDenied.h TimedOut.h Pipe.h File.h MappedFile.h FileReader.h FileException.h PipeException.h FileRegion.h LockableRegion.h
