####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =

noinst_LTLIBRARIES = libiterator.la

libiterator_la_SOURCES = SequenceIterator.cpp InterleavedIterator.cpp

sectiondir = $(includedir)/base/iterator
section_HEADERS = SequenceIterator.h InterleavedIterator.h
