####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libiterator.la

libiterator_la_SOURCES = InterleavedIterator.cpp MatrixColumnIterator.cpp MatrixRowIterator.cpp SequenceIterator.cpp

sectiondir = $(includedir)/base/iterator
section_HEADERS = InterleavedIterator.h MatrixColumnIterator.h MatrixRowIterator.h SequenceIterator.h
