# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libiterator.la

libiterator_la_SOURCES = InterleavedIterator.cpp MatrixColumnIterator.cpp MatrixRowIterator.cpp SequenceIterator.cpp

sectiondir = $(includedir)/base/iterator
section_HEADERS = InterleavedIterator.h MatrixColumnIterator.h MatrixRowIterator.h SequenceIterator.h
