####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =

noinst_LTLIBRARIES = libmathematics.la

libmathematics_la_SOURCES = ExpressionParser.cpp AmbiguousRegistration.cpp ExpressionException.cpp IncompatibleOperands.cpp Vector3D.cpp Vector2D.cpp Vector.cpp Matrix.cpp Complex.cpp

sectiondir = $(includedir)/base/mathematics
section_HEADERS = Matrix.h Vector.h Vector2D.h Vector3D.h IncompatibleOperands.h ExpressionException.h AmbiguousRegistration.h ExpressionParser.h Complex.h
