####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libmathematics.la

libmathematics_la_SOURCES = AmbiguousRegistration.cpp Complex.cpp ExpressionException.cpp ExpressionParser.cpp IncompatibleOperands.cpp Matrix.cpp Matrix4x4.cpp Quaternion.cpp Random.cpp Vector3D.cpp Vector2D.cpp Vector.cpp

sectiondir = $(includedir)/base/mathematics
section_HEADERS = AmbiguousRegistration.h Complex.h ExpressionException.h ExpressionParser.h IncompatibleOperands.h Matrix.h Matrix4x4.h Quaternion.h Random.h Vector.h Vector2D.h Vector3D.h
