# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libmathematics.la

libmathematics_la_SOURCES = \
  Complex.cpp \
  ExpressionException.cpp \
  ExpressionParser.cpp \
  IncompatibleOperands.cpp \
  MarsagliaRandomNumberGenerator.cpp \
  Math.cpp \
  Matrix.cpp \
  Matrix4x4.cpp \
  Quaternion.cpp \
  Random.cpp \
  Vector3D.cpp \
  Vector2D.cpp \
  Vector.cpp

sectiondir = $(includedir)/base/mathematics
section_HEADERS = \
  Complex.h \
  Constants.h \
  ExpressionException.h \
  ExpressionParser.h \
  IncompatibleOperands.h \
  MarsagliaRandomNumberGenerator.h \
  Math.h \
  Matrix.h \
  Matrix4x4.h \
  Quaternion.h \
  Random.h \
  Vector.h \
  Vector2D.h \
  Vector3D.h
