####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libmem.la

libmem_la_SOURCES = Allocator.cpp DebugDynamicMemory.cpp DynamicMemory.cpp Heap.cpp MemoryCorruption.cpp NullPointer.cpp

sectiondir = $(includedir)/base/mem
section_HEADERS = Allocator.h AllocatorEnumeration.h Buffer.h CapacityAllocator.h DebugDynamicMemory.h DynamicMemory.h Heap.h MemoryCorruption.h NullPointer.h ReferenceCountedObjectWrapper.h ReferenceCountedObjectPointer.h ReferenceCounter.h ReferenceCountedObject.h OwnershipPointer.h ReferenceCountedAllocator.h ReferenceCountedCapacityAllocator.h
